manifestapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: us-central1-docker.pkg.dev/neat-throne-411515/test-app/yapp:1
        ports:
        - containerPort: 5000
