manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-metrics-exporter
  labels:
    app: mock-metrics-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-metrics-exporter
  template:
    metadata:
      labels:
        app: mock-metrics-exporter
    spec:
      containers:
      - name: exporter
        image: lexmill99/mock-metrics-exporter:latest
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: mock-metrics-exporter
  labels:
    app: mock-metrics-exporter
spec:
  selector:
    app: mock-metrics-exporter
  ports:
  - protocol: TCP
    name: metrics
    port: 8000
    targetPort: 8000
